--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3'
 
 services: 
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:6.2.3
-    container_name: elasticsearch
+  tkow-elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:5.6.4
+    container_name: tkow-elasticsearch
     environment:
       - cluster.name=docker-cluster
       - bootstrap.memory_lock=true
