--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3'
 
 services: 
   tkow-elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:5.6.4
+    build:
+      context: ./els
     container_name: tkow-elasticsearch
     environment:
       - cluster.name=docker-cluster
@@ -13,7 +14,7 @@ services:
         soft: -1
         hard: -1
     volumes:
-      - esdata:/usr/share/elasticsearch/data
+      - ./els/esdata:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
     networks:
